plugins {
    java
    id("org.springframework.boot") version "3.2.5"
    id("io.spring.dependency-management") version "1.1.4"
}

group = "com.manager"
version = "0.0.1-SNAPSHOT"

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

configurations {
    compileOnly {
        extendsFrom(configurations.annotationProcessor.get())
    }
}

repositories {
    mavenCentral()
}

dependencies {
    implementation("org.springframework.boot:spring-boot-starter-web")
    implementation("org.springframework.boot:spring-boot-starter-security")
    implementation("org.springframework.boot:spring-boot-starter-websocket")

    // Firebase & Google Cloud
    implementation("com.google.firebase:firebase-admin:9.2.0")
    implementation("com.google.cloud:google-cloud-firestore:3.15.0")

    // OkHttp for REST calls (Gemini, Pinecone)
    implementation("com.squareup.okhttp3:okhttp:4.12.0")

    // Parse Lex.uz search results and official document pages
    implementation("org.jsoup:jsoup:1.18.3")

    // Jackson
    implementation("com.fasterxml.jackson.core:jackson-databind")
    implementation("com.fasterxml.jackson.datatype:jackson-datatype-jsr310")

    // PDF text extraction
    implementation("org.apache.pdfbox:pdfbox:3.0.1")

    // DOCX (.docx) text extraction
    implementation("org.apache.poi:poi-ooxml:5.2.5")

    // DOC (.doc legacy binary format) text extraction
    implementation("org.apache.poi:poi-scratchpad:5.2.5")

    // Validation (JSR-380 / Bean Validation)
    implementation("org.springframework.boot:spring-boot-starter-validation")

    // Spring Retry + AOP (required for @Retryable)
    implementation("org.springframework.retry:spring-retry")
    implementation("org.springframework.boot:spring-boot-starter-aop")

    // Lombok
    compileOnly("org.projectlombok:lombok:1.18.36")
    annotationProcessor("org.projectlombok:lombok:1.18.36")

    // Test
    testImplementation("org.springframework.boot:spring-boot-starter-test")
    testImplementation("org.springframework.security:spring-security-test")
    // MockWebServer for GeminiService HTTP tests
    testImplementation("com.squareup.okhttp3:mockwebserver:4.12.0")
}

tasks.withType<Test> {
    useJUnitPlatform()
}
